--- a/package.json
+++ b/package.json
@@ -3,24 +3,46 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "cross-env NODE_ENV=development webpack",
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.6.1",
-    "next": "12.0.3",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "history": "5",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.0.1",
     "sass": "^1.43.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
+    "fibers": "^5.0.0",
+    "isomorphic-style-loader": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.4",
+    "pino": "^7.1.0",
+    "pino-pretty": "^7.2.0",
     "postcss": "^8.3.11",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.2.0",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.4.4"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
