--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 
 # production
 /build
-/dist
 
 # misc
 .DS_Store
@@ -26,12 +25,14 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
-.env.dev
 
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
