--- a/package.json
+++ b/package.json
@@ -1,48 +1,36 @@
 {
   "name": "dialect",
-  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack",
-    "build": "cross-env NODE_ENV=production webpack",
-    "start": "node dist/server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@icons-pack/react-simple-icons": "^4.6.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "history": "5",
+    "@radix-ui/react-dropdown-menu": "^0.1.1",
+    "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
+    "cookie": "^0.4.1",
+    "next": "12.0.3",
+    "next-build-id": "^3.0.0",
+    "next-seo": "^4.28.1",
+    "nookies": "^2.5.2",
+    "postcss": "^8.3.11",
     "react": "17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
-    "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.0.1",
-    "sass": "^1.43.4"
+    "swr": "^1.0.1",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
-    "autoprefixer": "^10.4.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.5.1",
-    "fibers": "^5.0.0",
-    "isomorphic-style-loader": "^5.3.2",
-    "mini-css-extract-plugin": "^2.4.4",
-    "pino": "^7.1.0",
-    "pino-pretty": "^7.2.0",
-    "postcss": "^8.3.11",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.2.0",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^2.2.19",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.4.4",
-    "webpack": "^5.62.1",
-    "webpack-cli": "^4.9.1",
-    "webpack-node-externals": "^3.0.0"
+    "@types/cookie": "^0.4.1",
+    "@types/next-seo": "^2.1.2",
+    "@types/node": "16.11.7",
+    "@types/react": "17.0.34",
+    "eslint": "7",
+    "eslint-config-next": "12.0.3",
+    "sass": "^1.43.4",
+    "typescript": "4.4.4"
   }
 }
