--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "dialect",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "yarn run prisma && next dev",
+    "build": "yarn run prisma && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "prisma-merge -b db/base.prisma -o ./db/schema.prisma -s './db/**/*.prisma' && npx prisma format --schema db/schema.prisma && npx prisma generate --schema db/schema.prisma"
   },
   "dependencies": {
+    "@prisma/client": "^3.4.2",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
@@ -30,6 +32,7 @@
     "@types/react": "17.0.34",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
+    "prisma-merge": "^0.2.0",
     "sass": "^1.43.4",
     "typescript": "4.4.4"
   }
