--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "yarn run prisma && next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma": "prisma-merge -b db/base.prisma -o ./db/schema.prisma -s './db/**/*.prisma' && npx prisma format --schema db/schema.prisma && PRISMA_CLIENT_ENGINE_TYPE=dataproxy npx prisma generate --schema db/schema.prisma"
+    "prisma": "prisma-merge -b db/base.prisma -o ./db/schema.prisma -s './db/**/*.prisma' && npx prisma format --schema db/schema.prisma && npx prisma generate --schema db/schema.prisma"
   },
   "dependencies": {
     "@emotion/react": "^11.6.0",
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "cookie": "^0.4.1",
     "next": "12.0.3",
+    "next-absolute-url": "^1.2.2",
     "next-build-id": "^3.0.0",
     "next-seo": "^4.28.1",
     "nookies": "^2.5.2",
