--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.1.0",
     "@prisma/client": "^3.4.2",
+    "@radix-ui/react-dialog": "^0.1.1",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
@@ -26,6 +27,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "s-ago": "^2.2.0",
     "swr": "^1.0.1",
     "tailwindcss": "^2.2.19"
   },
