--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^0.1.1",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.4.1",
     "next": "12.0.3",
     "next-absolute-url": "^1.2.2",
@@ -29,13 +30,15 @@
     "react-feather": "^2.0.9",
     "s-ago": "^2.2.0",
     "swr": "^1.0.1",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^2.2.19",
+    "title": "^3.4.3"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
     "@types/next-seo": "^2.1.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@types/title": "^3.4.1",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
     "prisma-merge": "^0.2.0",
