💥 Add accounts system and project pages

--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@icons-pack/react-simple-icons": "^4.6.1",
     "@mui/material": "^5.1.0",
     "@prisma/client": "^3.4.2",
     "@radix-ui/react-dialog": "^0.1.1",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
+    "@radix-ui/react-id": "^0.1.1",
+    "argon2": "^0.28.2",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.4.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.3",
     "next-absolute-url": "^1.2.2",
     "next-build-id": "^3.0.0",
@@ -28,6 +32,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-twemoji": "^0.3.0",
     "s-ago": "^2.2.0",
     "swr": "^1.0.1",
     "tailwindcss": "^2.2.19",
@@ -35,6 +40,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/next-seo": "^2.1.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
