--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.4.1",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "next": "12.0.3",
     "next-absolute-url": "^1.2.2",
@@ -34,9 +35,11 @@
     "react-feather": "^2.0.9",
     "react-twemoji": "^0.3.0",
     "s-ago": "^2.2.0",
+    "slugify": "^1.6.2",
     "swr": "^1.0.1",
     "tailwindcss": "^2.2.19",
-    "title": "^3.4.3"
+    "title": "^3.4.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
@@ -45,6 +48,7 @@
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "@types/title": "^3.4.1",
+    "@types/yup": "^0.29.13",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
     "prisma-merge": "^0.2.0",
