--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.4.1",
+    "flickity": "^2.2.2",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "next": "12.0.3",
@@ -33,6 +34,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-flickity-component": "^3.6.2",
     "react-twemoji": "^0.3.0",
     "s-ago": "^2.2.0",
     "slugify": "^1.6.2",
